--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="icon" type="image/x-icon" href="https://example.com/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="https://leavinth.github.io/favicon.ico">
     <title>Home</title>
     <link href="https://fonts.googleapis.com/css?family=Oswald:700" rel="stylesheet">
     <link href="../Stylesheets/Default.css" type="text/css" rel="stylesheet">
