--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -17,11 +17,13 @@
     </header>
     <article>
     <img src="../images/portfolio.jpg" height="250">
-    <br>
-    <a target="_blank" href="https://scratch.mit.edu">
-      <img src="../images/scratchlogo.png" height="100">
-    </a>
-     <a href="../HTML/spacer.html">Space-r</a>
+	    <p>This portfolio is a collection of the projects that I have completed or I am currently working on. The first project on
+	    my portfolio happens to be the portfolio, welcome.</p>
+    </article>
+	<article>
+    <a href="../HTML/spacer.html"><h3>Space-r</h3> <img src="../images/spacerthumb.jpg"</a>
+	    
+	    <a target="_blank" href="https://scratch.mit.edu">Scratch</a>
      </article>
          <footer>
       
