updated image directory

--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -21,7 +21,7 @@
 	    my portfolio happens to be the portfolio, welcome.</p>
     </article>
 	<article>
-    <a href="../HTML/spacer.html"><h3>Space-r</h3> <img src="../images/spacerthumb.jpg"</a>
+    <a href="../HTML/spacer.html"><h3>Space-r</h3> <img src="../images/spacer thumb.png"</a>
 	    
 	    <a target="_blank" href="https://scratch.mit.edu">Scratch</a>
      </article>
