--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -16,15 +16,18 @@
     <a href="../HTML/vocab.html">Vocab</a>
     </header>
     <article>
+	    <h3>Portfolio</h3>
     <img src="../images/portfolio.jpg" height="250">
 	    <p>This portfolio is a collection of the projects that I have completed or I am currently working on. The first project on
 	    my portfolio happens to be the portfolio, welcome.</p>
     </article>
 	<article>
-    <a href="../HTML/spacer.html"><h3>Space-r</h3> <img src="../images/spacer thumb.png"</a>
+    <a href="../HTML/spacer.html"><h3>Space-r</h3> <img src="../images/spacer thumb.png" width=20%</a>
+	   <p> 
+		   This is my own take on frogger, new elements and theme make bring the game to life.<a target="_blank" href="https://scratch.mit.edu">Scratch</a>
 	    
-	    <a target="_blank" href="https://scratch.mit.edu">Scratch</a>
-     </article>
+	    </p>
+	    </article>
          <footer>
       
     </footer>
