--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -22,7 +22,7 @@
 	    my portfolio happens to be the portfolio, welcome.</p>
     </article>
 	<article>
-    <a href="../HTML/spacer.html"><h3>Space-r</h3> <img src="../images/spacer thumb.png" width=20%</a>
+    <a href="../HTML/articles/spacer.html"><h3>Space-r</h3> <img src="../images/spacer thumb.png" width=20%</a>
 	   <p> 
 		   This is my own take on frogger, new elements and theme make bring the game to life.<a target="_blank" href="https://scratch.mit.edu">Scratch</a>
 	    
