redirect to github

--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -16,8 +16,8 @@
     <a href="../HTML/vocab.html">Vocab</a>
     </header>
     <article>
-	    <h3>Portfolio</h3>
-    <img src="../images/portfolio.jpg" height="250">
+	   <a href="https://github.com/leavinth/leavinth.github.io"> <h3>Portfolio</h3>
+		  <img src="../images/portfolio.jpg" height="250"></a>
 	    <p>This portfolio is a collection of the projects that I have completed or I am currently working on. The first project on
 	    my portfolio happens to be the portfolio, welcome.</p>
     </article>
