added section 3 notes

--- a/HTML/vocab.html
+++ b/HTML/vocab.html
@@ -37,6 +37,7 @@
     </article>
     <article>
         <h2>Section 2</h2>
+      <ul>
         <li>Packets - small amount of data in a format</li>
         <li>Router - Piece of hardware that passes packets between networks</li>
         <li>ISP - Internet service provider provides internet access to users</li>
@@ -46,6 +47,34 @@
         <li>IPv6 - 128 bit internet protocol, newer version of ipv4 with more possible addresses</li>
         <li>DNS - provides a human friendly address</li>
         <li>Name servers - keep track of ip addresses for a given domain name</li>
+      </ul>
+    </article>
+    <article>
+        <h2>Section 3</h2>
+      <ul>
+<li>browser tab - A separate viewing pane within a browser window, many of which may be open at once, allowing a user to switch quickly between web pages.
+        </li><li>Bookmarks - A piece of data used by a browser to allow the user to return quickly to a previously visited site.
+        </li><li>History - Information stored by a browser about the web resources that it has requested.
+        </li><li>Browser - Apiece of software that renders web pages and allows users to view resources on a network.
+        </li><li>client application - A program that makes use of another piece of software or set of data; for web interactions, the web browser is usually the client application.
+        </li><li>client machine - A machine running a client application.
+        </li><li>TCP/IP - The dominant set of protocols for the transfer of data over the Internet.
+        </li><li>Redundancy - The property of having many resources or components which all serve identical purposes.
+        </li><li>URL - Uniform Resource Locators are strings of characters that contain information about how to access a resource over the Internet
+        </li><li>Parameters - A value used in a model.
+        </li><li>Port - A subset of network traffic received at an IP address, specified by a port number. Traffic at any particular port number is usually listened to by a particular type of application or process that is being accessed on a server.
+        </li><li>Filter - A program or device that allows or passes some packets through while blocking others based on predetermined criteria.
+        </li><li>Cookie - A small piece of data stored on the client machine that can only be accessed by the server that issued it.
+        </li><li>Add-ons - A piece of software designed to enhance the capabilities of another piece of software.
+        </li><li>third-party cookies - A cookie that is stored on a client computer by a domain other than the one that is currently requesting resources.
+        </li><li>HTML - HyperText Markup Language is the most common language used for creating web pages.
+        </li><li>CSS - Cascading Style Sheets contain hierarchical information about how the content of a web page will be rendered in a browser.
+        </li><li>JavaScript - A client-side scripting language used to write programs that are embedded in web pages, often to make a web page more interactive.
+        </li><li>web crawlers - A softbot responsible for following hyperlinks throughout the Internet to provide information for the creation of a web index.
+        </li><li>web index - A database that stores information about web content.
+        </li><li>Query - A database that stores information about web content.</li>
+
+      </ul>
     </article>
         <footer>
       
