--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -29,9 +29,9 @@
 	    </p>
 	    </article>
 		<article>
-			<a href="../HTML/articles/platformer.html"><h3>Platformer</h3> <img src="../images/platformer thumb.png" width=20%></a>
+			<a href="../HTML/articles/platformer.html"><h3>Platformer</h3> <img src="../images/platformermap.png" width=20%></a>
 	   <p> 
-		   This is my attempt at a sidescrolling platformer game. As of version 0.21 it contains basic platformer mechanics such as jumping, moving left, right. Bloks is the temporary name for the platformer as most everything was made of squares originally.  
+		   This is my attempt at a sidescrolling platformer game. As of version 0.60 it contains basic platformer mechanics such as jumping, moving left, right and falling quicker. The game features moving platforms, falling platforms, and strategically placed coins. The leaderboard is updated with your score and time immediately(although a refresh of the tab may be necessary to see this).  
 	    
 	    </p>
 		</article>
