--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109328318-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-109328318-1');
+</script>
+
     <link rel="icon" type="image/x-icon" href="https://leavinth.github.io/favicon.ico">
     <title>Home</title>
     <link href="https://fonts.googleapis.com/css?family=Oswald:700" rel="stylesheet">
