--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -3,6 +3,15 @@
 	  <head>
 	    <meta charset="utf-8">
 	    <title>Portfolio</title>
+		  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109328318-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-109328318-1');
+</script>
 	    <link href="https://fonts.googleapis.com/css?family=Oswald:700" rel="stylesheet">
     <link href="../Stylesheets/Default.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
