--- a/HTML/vocab.html
+++ b/HTML/vocab.html
@@ -19,7 +19,7 @@
   <body>
     <header>
     <h1>Vocabulary</h1>
-    <a href="../HTML/index.html">Home</a> •
+    <a href="../../index.html">Home</a> •
     <a href="../HTML/portfolio.html">Portfolio</a> •
     <a href="../HTML/about.html">About me</a> •
     <a href="../HTML/vocab.html">Vocab</a>
