--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -19,7 +19,7 @@
 	  <body>
 	      <header>
 	<h1>This is my Portfolio Page!</h1>
-    <a href="../HTML/index.html">Home</a> •
+    <a href="../../index.html">Home</a> •
     <a href="../HTML/portfolio.html">Portfolio</a> •
     <a href="../HTML/about.html">About me</a> •
     <a href="../HTML/vocab.html">Vocab</a>
