--- a/HTML/about.html
+++ b/HTML/about.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>About Me</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109328318-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-109328318-1');
+</script>
     <link href="https://fonts.googleapis.com/css?family=Oswald:700" rel="stylesheet">
     <link href="../Stylesheets/Default.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
@@ -10,7 +19,7 @@
   <body>
     <header>
     <h1>About Me</h1>
-    <a href="../HTML/index.html">Home</a> •
+    <a href="../../index.html">Home</a> •
     <a href="../HTML/portfolio.html">Portfolio</a> •
     <a href="../HTML/about.html">About me</a> •
     <a href="../HTML/vocab.html">Vocab</a>
