--- a/site/vocab/index.html
+++ b/site/vocab/index.html
@@ -12,16 +12,16 @@
 
   gtag('config', 'UA-109328318-1');
 </script>
-    <link href="../Stylesheets/Default.css" type="text/css" rel="stylesheet">
+    <link href="../../Stylesheets/Default.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   </head>
   <body>
     <header>
     <h1>Vocabulary</h1>
     <a href="../../index.html">Home</a> •
-    <a href="../HTML/portfolio.html">Portfolio</a> •
-    <a href="../HTML/about.html">About me</a> •
-    <a href="../HTML/vocab.html">Vocab</a>
+    <a href="../portfolio">Portfolio</a> •
+    <a href="../about">About me</a> •
+    <a href="../vocab">Vocab</a>
     </header>
     <article>
       <h2>Section 1</h2>
