--- a/site/Baseplate/index.html
+++ b/site/Baseplate/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-<!-- Global site tag (gtag.js) - Google Analytics -->
+    <title>Baseplate-site</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109328318-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -11,25 +12,22 @@
 
   gtag('config', 'UA-109328318-1');
 </script>
-
-    <link rel="icon" type="image/x-icon" href="https://leavinth.github.io/favicon.ico">
-    <title>Home</title>
-    <link href="Stylesheets/Default.css" type="text/css" rel="stylesheet">
+    <link href="../../Stylesheets/Default.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   </head>
   <body>
     <header>
     <h1>This is my test Home Page!</h1>
-    <a href="index.html">Home</a> •
-    <a href="site/portfolio">Portfolio</a> •
-    <a href="site/about">About me</a> •
-    <a href="site/vocab">Vocab</a>
+    <a href="../../index.html">Home</a> •
+    <a href="../portfolio">Portfolio</a> •
+    <a href="../about">About me</a> •
+    <a href="../vocab">Vocab</a>
     </header>
     <article>
       <h2>Article1</h2>
-    <img src="images/argentina.png" width="250px;">
+    <img src="../../images/argentina.png" width="250px;">
     </article>
-        <footer>
+    <footer>
       
     </footer>
   </body>
