--- a/site/portfolio/platformer/index.html
+++ b/site/portfolio/platformer/index.html
@@ -27,7 +27,7 @@
     <header>
     <h1>This is my test Home Page!</h1>
     <a href="../../../index.html">Home</a> •
-    <a href="../portfolio">Portfolio</a> •
+    <a href="../../portfolio">Portfolio</a> •
     <a href="../../about">About me</a> •
     <a href="../../vocab">Vocab</a>
     </header>
