--- a/site/portfolio/index.html
+++ b/site/portfolio/index.html
@@ -19,9 +19,9 @@
 	      <header>
 	<h1>This is my Portfolio Page!</h1>
     <a href="../../index.html">Home</a> •
-    <a href="../portfolio.html">Portfolio</a> •
-    <a href="../about.html">About me</a> •
-    <a href="../vocab.html">Vocab</a>
+    <a href="../portfolio">Portfolio</a> •
+    <a href="../about">About me</a> •
+    <a href="../vocab">Vocab</a>
     </header>
     <article>
 	   <a href="https://github.com/leavinth/leavinth.github.io"> <h3>Portfolio</h3>
