--- a/site/portfolio/index.html
+++ b/site/portfolio/index.html
@@ -30,14 +30,14 @@
 	    my portfolio happens to be the portfolio, welcome.</p>
     </article>
 	<article>
-    <a href="/spacer/"><h3>Space-r</h3> <img src="../../images/spacer thumb.png" width=20%></a>
+    <a href="portfolio/spacer/"><h3>Space-r</h3> <img src="../../images/spacer thumb.png" width=20%></a>
 	   <p> 
 		   This is my own take on frogger, new elements and theme make bring the game to life.<a target="_blank" href="https://scratch.mit.edu">Scratch</a>
 	    
 	    </p>
 	    </article>
 		<article>
-			<a href="/platformer/"><h3>Platformer</h3> <img src="../../images/platformermap.png" width=20%></a>
+			<a href="portfolio/platformer/"><h3>Platformer</h3> <img src="../../images/platformermap.png" width=20%></a>
 	   <p> 
 		   This is my attempt at a sidescrolling platformer game. As of version 0.60 it contains basic platformer mechanics such as jumping, moving left, right and falling quicker. The game features moving platforms, falling platforms, and strategically placed coins. The leaderboard is updated with your score and time immediately(although a refresh of the tab may be necessary to see this).  
 	    
