--- a/site/about/index.html
+++ b/site/about/index.html
@@ -24,11 +24,24 @@
     <a href="../vocab">Vocab</a>
     </header>
     <article>
-      <h2>Preamble</h2>
+      <h4>Quick Rundown</h4>
     <p>
-      Levi was born in Buttenheim, Germany, on February 26, 1829, in the Franconian region of Bavaria, Germany, to an Ashkenazi Jewish family. He was the son of Hirsch and his second wife Rebecca. At the age of 18, 
-      he, his mother and two sisters traveled to the United States to join his brothers Jonas and Louis, who had begun a wholesale dry goods business in New York City.
-    </p>
+I'm a 17 year-old student at Lancaster High school. My long term goal is to be an entrepreneur, my own source of finance. Until that time I plan on continuing my education and gaining experience. The purpose of this website is to host my projects in a quasi-public environment. 
+</p>
+	<h4>Music</h4>
+	<p>
+	My favourite artists: Twenty One Pilots<br />
+	Currently my favourite song is <a href="https://www.youtube.com/watch?v=K-Vmd0h38-A" >Neverland by Mazde </a> <br/>
+	</p>
+	<h4>Literature I Enjoyed</h4>
+	<p>
+	The Magicians Nephew by C.S. Lewis<br />
+	Anthem by Ann Rand<br />
+	The Begginers Guide to Living by Lia Hills<br />
+	The Giver by Lois Lowry<br />
+	20,000 Leagues Under the Sea by Jules Verne <br />
+	The Hotzone by Richard Preston
+	</p>
     </article>
     <footer>
       
