--- a/index.html
+++ b/index.html
@@ -19,16 +19,19 @@
   </head>
   <body>
     <header>
-    <h1>This is my test Home Page!</h1>
+    <h1>Home Page</h1>
     <a href="index.html">Home</a> •
     <a href="site/portfolio">Portfolio</a> •
     <a href="site/about">About me</a> •
     <a href="site/vocab">Vocab</a>
     </header>
     <article>
-      <h2>Article1</h2>
-    <img src="images/argentina.png" width="250px;">
-    </article>
+      <h2>Projects I Am Currently Developing</h2>
+	  <a href="site/portfolio/platformer/"><section><img src="images/full thumb.png" width="90%;"><p>Bloks <br /> WebGL Platformer</p></section></a>
+	  
+	  <a href="https://github.com/leavinth/leavinth.github.io"><section><img src="images/fullportfoliotb.png" width="90%;"><p>Portfolio <br /> This website</p></section></a>
+    
+	</article>
         <footer>
       
     </footer>
