--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     </header>
     <article>
       <h2>Projects I Am Currently Developing</h2>
-	  <a href="site/portfolio/platformer/"><section><img src="images/full thumb.png" width="90%;"><p>Bloks <br /> WebGL Platformer</p></section></a>
+	  <a href="site/portfolio/platformer/"><section><img src="images/Full thumb.PNG" width="90%;"><p>Bloks <br /> WebGL Platformer</p></section></a>
 	  
-	  <a href="https://github.com/leavinth/leavinth.github.io"><section><img src="images/fullportfoliotb.png" width="90%;"><p>Portfolio <br /> This website</p></section></a>
+	  <a href="https://github.com/leavinth/leavinth.github.io"><section><img src="images/Fullportfoliotb.PNG" width="90%;"><p>Portfolio <br /> This website</p></section></a>
     
 	</article>
         <footer>
