Gross game info slider

--- a/site/portfolio/platformer/index.html
+++ b/site/portfolio/platformer/index.html
@@ -34,7 +34,8 @@
     <article>
       <h2>Bloks</h2>
       <div id="gameContainer" style="width: 800px; height: 413px; margin: auto"></div>
-      <h4>Game Info:</h4>
+      <section class="drop"><h4>Game Info:</h4>
+	  <div>
       <p>Genre: platformer
 	  <br /><a href="https://goo.gl/forms/U1KS53MVUwMZimFB2">Bugs or suggestions? Report here.</a>
 	  <br/>Version:0.61{
@@ -44,7 +45,9 @@
 	  <br/>Added support for WASD and Numberpad controls(0.61 fixed W and 8 jumping)
 	  <br/>Map update;
 	  <br/>Added analytics;
-}</p>
+	  }</p>
+	  </div>
+	  </section>
     </article>
     <article>
       <h3>Leaderboard</h3>
