--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 </script>
 
     <link rel="icon" type="image/x-icon" href="https://leavinth.github.io/favicon.ico">
-    <title>Home</title>
+    <title>Levi Evans || Portfolio</title>
     <link href="Stylesheets/Default.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   </head>
   <body>
     <header>
-    <h1>Home Page</h1>
+    <span itemscope itemtype="http://schema.org/Person"><h1>Levi Evans</h1></span>
     <a href="index.html">Home</a> •
     <a href="site/portfolio">Portfolio</a> •
     <a href="site/about">About me</a> •
@@ -27,7 +27,7 @@
     </header>
     <article>
       <h2>Projects I Am Currently Developing</h2>
-	  <a href="site/portfolio/platformer/"><section><img src="images/Full thumb.PNG" width="90%;"><p>Bloks <br /> WebGL Platformer</p></section></a>
+	  <a href="site/portfolio/platformer/"><section itemscope itemtype="http://schema.org/VideoGame"><img src="images/Full thumb.PNG" width="90%;"><p itemprop="name">Bloks <br /><span itemprop="gamePlatform"> WebGL</span><span itemprop="genre"> Platformer</span></p></section></a>
 	  
 	  <a href="https://github.com/leavinth/leavinth.github.io"><section><img src="images/Fullportfoliotb.PNG" width="90%;"><p>Portfolio <br /> This website</p></section></a>
     
