--- a/site/Baseplate/index.html
+++ b/site/Baseplate/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Baseplate-site</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109328318-1"></script>
 <script>
@@ -12,6 +11,7 @@
 
   gtag('config', 'UA-109328318-1');
 </script>
+<?php include 'Testphp';?>
     <link href="../../Stylesheets/Default.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   </head>
