--- a/site/Baseplate/index.html
+++ b/site/Baseplate/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
 	<title>Wowza</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="head.js" type="application/javascript" rel="preload"></script>
+    <script src="https://leavinth.github.io/javascript/head.js" type="application/javascript" rel="preload"></script>>
   </head>
   <body>
-  	<script src="header.js" type="application/javascript" rel="preload"></script>
+  	    <script src="https://leavinth.github.io/javascript/header.js" type="application/javascript" rel="preload"></script>
 	<article>
       <h2>Article1</h2>
     <img src="../../images/argentina.png" width="250px;">
@@ -20,6 +20,6 @@
       <h2>Article1</h2>
     <img src="../../images/argentina.png" width="250px;">
     </article>
-	<script src="footer.js" type="application/javascript" rel="preload"></script>
+	  <script src="https://leavinth.github.io/javascript/footer.js" type="application/javascript" rel="preload"></script>
   </body>
 </html>
