--- a/site/portfolio/index.html
+++ b/site/portfolio/index.html
@@ -3,34 +3,15 @@
 	  <head>
 	    <meta charset="utf-8">
 	    <title>Portfolio</title>
-		  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109328318-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-109328318-1');
-</script>
-    <link href="../../Stylesheets/Default.css" type="text/css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+		
+		 <script src="https://leavinth.github.io/javascript/head.js" type="application/javascript" rel="preload"></script>
 	  </head>
 	  <body>
-	      <header>
-	<h1>This is my Portfolio Page!</h1>
-    <a href="../../index.html">Home</a> •
-    <a href="../portfolio">Portfolio</a> •
-    <a href="../about">About me</a> •
-    <a href="../vocab">Vocab</a>
-    </header>
-    <article>
+	     <script src="https://leavinth.github.io/javascript/header.js" type="application/javascript" rel="preload"></script>
 	<a href="https://github.com/leavinth/leavinth.github.io"><section> <h3>Portfolio</h3> <img src="../../images/portfolio.jpg"> <p>This portfolio is a collection of the projects that I have completed or I am currently working on. The first project on my portfolio happens to be the portfolio, welcome.</p> </section> </a>
     <a href="../portfolio/spacer/"><section> <h3>Space-r</h3> <img src="../../images/spacer thumb.png" width=20%><p> This is my own take on frogger, new elements and theme make bring the game to life.<a target="_blank" href="https://scratch.mit.edu">Scratch</a> </p>  </section> </a>
 	<a href="../portfolio/platformer/"> <section> <h3>Platformer</h3> <img src="../../images/platformermap.png" width=20%> <p>This is my attempt at a sidescrolling platformer game. As of version 0.60 it contains basic platformer mechanics such as jumping, moving left, right and falling quicker. The game features moving platforms, falling platforms, and strategically placed coins. The leaderboard is updated with your score and time immediately(although a refresh of the tab may be necessary to see this).</p></section></a>
 	
-	</article>
-         <footer>
-      
-    </footer>
+         <script src="https://leavinth.github.io/javascript/footer.js" type="application/javascript" rel="preload"></script>
 	  </body>
 	</html>
