--- a/index.html
+++ b/index.html
@@ -1,30 +1,13 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109328318-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-109328318-1');
-</script>
-
-    <link rel="icon" type="image/x-icon" href="https://leavinth.github.io/favicon.ico">
-    <title>Levi Evans || Portfolio</title>
-    <link href="Stylesheets/Default.css" type="text/css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+   <meta charset="utf-8">
+	<title>Home</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://leavinth.github.io/javascript/head.js" type="application/javascript" rel="preload"></script>
   </head>
   <body>
-    <header>
-    <span itemscope itemtype="http://schema.org/Person"><h1>Levi Evans</h1></span>
-    <a href="index.html">Home</a> •
-    <a href="site/portfolio">Portfolio</a> •
-    <a href="site/about">About me</a> •
-    <a href="site/vocab">Vocab</a>
-    </header>
+    <script src="https://leavinth.github.io/javascript/header.js" type="application/javascript" rel="preload"></script>
     <article>
       <h2>Projects I Am Currently Developing</h2>
 	  <a href="site/portfolio/platformer/"><section itemscope itemtype="http://schema.org/VideoGame"><img src="images/Full thumb.PNG" width="90%;"><p itemprop="name">Bloks <br /><span itemprop="gamePlatform"> WebGL</span><span itemprop="genre"> Platformer</span></p></section></a>
@@ -32,8 +15,6 @@
 	  <a href="https://github.com/leavinth/leavinth.github.io"><section><img src="images/Fullportfoliotb.PNG" width="90%;"><p>Portfolio <br /> This website</p></section></a>
     
 	</article>
-        <footer>
-      
-    </footer>
+ <script src="https://leavinth.github.io/javascript/footer.js" type="application/javascript" rel="preload"></script>
   </body>
 </html>
