--- a/site/about/index.html
+++ b/site/about/index.html
@@ -3,26 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>About Me</title>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109328318-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-109328318-1');
-</script>
-    <link href="../../Stylesheets/Default.css" type="text/css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+ <script src="https://leavinth.github.io/javascript/head.js" type="application/javascript" rel="preload"></script>
   </head>
   <body>
-    <header>
-    <h1>About Me</h1>
-    <a href="../../index.html">Home</a> •
-    <a href="../portfolio">Portfolio</a> •
-    <a href="../about">About me</a> •
-    <a href="../vocab">Vocab</a>
-    </header>
+<script src="https://leavinth.github.io/javascript/header.js" type="application/javascript" rel="preload"></script>
     <article>
       <h4>Quick Rundown</h4>
     <p>
@@ -43,8 +27,6 @@ I'm a 17 year-old student at Lancaster High school. My long term goal is to be a
 	The Hotzone by Richard Preston
 	</p>
     </article>
-    <footer>
-      
-    </footer>
+<script src="https://leavinth.github.io/javascript/footer.js" type="application/javascript" rel="preload"></script>
   </body>
 </html>
