--- a/site/vocab/index.html
+++ b/site/vocab/index.html
@@ -3,26 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Vocabulary</title>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109328318-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-109328318-1');
-</script>
-    <link href="../../Stylesheets/Default.css" type="text/css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <script src="https://leavinth.github.io/javascript/head.js" type="application/javascript" rel="preload"></script>
   </head>
   <body>
-    <header>
-    <h1>Vocabulary</h1>
-    <a href="../../index.html">Home</a> •
-    <a href="../portfolio">Portfolio</a> •
-    <a href="../about">About me</a> •
-    <a href="../vocab">Vocab</a>
-    </header>
+    <script src="https://leavinth.github.io/javascript/header.js" type="application/javascript" rel="preload"></script>
     <article>
       <h2>Section 1</h2>
         <ul>
@@ -84,8 +68,6 @@
 
       </ul>
     </article>
-        <footer>
-      
-    </footer>
+       <script src="https://leavinth.github.io/javascript/footer.js" type="application/javascript" rel="preload"></script>
   </body>
 </html>
