--- a/site/portfolio/spacer/index.html
+++ b/site/portfolio/spacer/index.html
@@ -2,26 +2,10 @@
 <html>
     <head>
         <title>Space-r  Game</title>
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109328318-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-109328318-1');
-</script>
-    <link href="../../../Stylesheets/Default.css" type="text/css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+<script src="https://leavinth.github.io/javascript/head.js" type="application/javascript" rel="preload"></script>
     </head>
     <body>
-        <header>
-            <h1>Projects</h1>
-        <a href="../../../index.html">Home</a> •
-        <a href="../../portfolio">Portfolio</a> •
-        <a href="../../about">About me</a> •
-        <a href="../../vocab">Vocab</a>
-    </header>
+<script src="https://leavinth.github.io/javascript/header.js" type="application/javascript" rel="preload"></script>
         <article>
             <h2>Space-r</h2>
             <iframe allowtransparency="true" width=70% height=400px src="//scratch.mit.edu/projects/embed/172920095/?autostart=true" frameborder="0" allowfullscreen=true></iframe>
@@ -52,9 +36,7 @@ Space Trip
 https://www.dl-sounds.com/royalty-free/space-trip/
         </p>
         </article>
-            <footer>
-      
-    </footer>
+<script src="https://leavinth.github.io/javascript/footer.js" type="application/javascript" rel="preload"></script>
     </body>
     
 </html>
