--- a/site/portfolio/platformer/index.html
+++ b/site/portfolio/platformer/index.html
@@ -4,6 +4,16 @@
 <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Bloks | game platformer</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109328318-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-109328318-1');
+</script>
     <script src="https://leavinth.github.io/javascript/head.js" type="application/javascript" rel="preload"></script>
    <script src="Build/UnityLoader.js"></script>
     <script>
