--- a/site/about/index.html
+++ b/site/about/index.html
@@ -3,6 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>About Me</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109328318-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-109328318-1');
+</script>
  <script src="https://leavinth.github.io/javascript/head.js" type="application/javascript" rel="preload"></script>
   </head>
   <body>
