--- a/site/portfolio/index.html
+++ b/site/portfolio/index.html
@@ -3,7 +3,15 @@
 	  <head>
 	    <meta charset="utf-8">
 	    <title>Portfolio</title>
-		
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109328318-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-109328318-1');
+</script>
 		 <script src="https://leavinth.github.io/javascript/head.js" type="application/javascript" rel="preload"></script>
 	  </head>
 	  <body>
