--- a/site/portfolio/spacer/index.html
+++ b/site/portfolio/spacer/index.html
@@ -2,6 +2,16 @@
 <html>
     <head>
         <title>Space-r  Game</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109328318-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-109328318-1');
+</script>
 <script src="https://leavinth.github.io/javascript/head.js" type="application/javascript" rel="preload"></script>
     </head>
     <body>
