--- a/site/portfolio/index.html
+++ b/site/portfolio/index.html
@@ -3,6 +3,7 @@
 	  <head>
 	    <meta charset="utf-8">
 	    <title>Portfolio</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109328318-1"></script>
 <script>
