JPGjpg switcharoo + footer update

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <script src="https://leavinth.github.io/javascript/header.js" type="application/javascript" rel="preload"></script>
     <article>
       <h2>Projects I Am Currently Developing</h2>
-	  <a href="site/portfolio/platformer/"><section itemscope itemtype="http://schema.org/VideoGame"><img src="images/Fullthumb.PNG" width="90%;"><p itemprop="name">Bloks <br /><span itemprop="gamePlatform"> WebGL</span><span itemprop="genre"> Platformer</span></p></section></a>
+	  <a href="site/portfolio/platformer/"><section itemscope itemtype="http://schema.org/VideoGame"><img src="images/Fullthumb.png" width="90%;"><p itemprop="name">Bloks <br /><span itemprop="gamePlatform"> WebGL</span><span itemprop="genre"> Platformer</span></p></section></a>
 	  
-	  <a href="https://github.com/leavinth/leavinth.github.io"><section><img src="images/Fullportfoliotb.png" width="90%;"><p>Portfolio <br /> This website</p></section></a>
+	  <a href="https://github.com/leavinth/leavinth.github.io"><section><img src="images/Fullportfoliotb.PNG" width="90%;"><p>Portfolio <br /> This website</p></section></a>
     
 	</article>
  <script src="https://leavinth.github.io/javascript/footer.js" type="application/javascript" rel="preload"></script>
