update structured data

--- a/site/about/index.html
+++ b/site/about/index.html
@@ -17,10 +17,10 @@
   </head>
   <body>
 <script src="https://leavinth.github.io/javascript/header.js" type="application/javascript" rel="preload"></script>
-    <article>
+    <article itemscope itemtype="http://schema.org/Person">
       <h4>Quick Rundown</h4>
-    <p>
-I'm a 17 year-old student at Lancaster High school. My long term goal is to be an entrepreneur, my own source of finance. Until that time I plan on continuing my education and gaining experience. The purpose of this website is to host my projects in a quasi-public environment. 
+    <p itemprop="description">
+I'm <span itemprop="name">Levi Pierce Evans</span>, a 17 year-old <span itemprop="hasOccupation">student</span> at <span itemprop="workLocation"><span itemprop="birthPlace">Lancaster</span> High school</span>. My long term goal is to be an entrepreneur, my own source of finance. Until that time I plan on continuing my education and gaining experience. The purpose of this website is to host my projects in a quasi-public environment. 
 </p>
 	<h4>Music</h4>
 	<p>
