--- a/site/portfolio/index.html
+++ b/site/portfolio/index.html
@@ -23,6 +23,7 @@
     <a href="https://leavinth.github.io/site/portfolio/spacer/"><section> <h3>Space-r</h3> <img src="https://leavinth.github.io/images/spacerthumb.png" width=20%><p> This is my own take on frogger, new elements and theme make bring the game to life.Scratch </p></section></a>
 	<a href="https://leavinth.github.io/site/portfolio/platformer/"> <section> <h3>Platformer</h3> <img src="https://leavinth.github.io/images/platformermap.png" width=20%> <p>This is my attempt at a sidescrolling platformer game. As of version 0.60 it contains basic platformer mechanics such as jumping, moving left, right and falling quicker. The game features moving platforms, falling platforms, and strategically placed coins. The leaderboard is updated with your score and time immediately(although a refresh of the tab may be necessary to see this).</p></section></a>
 			 <a href="https://leavinth.github.io/site/portfolio/dragster/"> <section> <h3>CO2 Dragster</h3> <img src="https://leavinth.github.io/images/car_body-plastic-glass.bmp" width=20%> <p>This is the documentation for my CO2 dragster.</p></section></a>
+			 <a href="https://leavinth.github.io/site/portfolio/dragster/"> <section> <h3></h3> <img src="https://leavinth.github.io/images/car_body-plastic-glass.bmp" width=20%> <p>This is the documentation for my CO2 dragster.</p></section></a>
 		</article>
          <script src="https://leavinth.github.io/javascript/footer.js" type="application/javascript" rel="preload"></script>
 	  </body>
