--- a/site/about/index.html
+++ b/site/about/index.html
@@ -20,7 +20,7 @@
     <article itemscope itemtype="http://schema.org/Person">
       <h4>Quick Rundown</h4>
     <p itemprop="description">
-I'm <span itemprop="name">Levi Pierce Evans</span>, a 17 year-old <span itemprop="hasOccupation">student</span> at <span itemprop="workLocation"><span itemprop="birthPlace">Lancaster</span> High school</span>. My long term goal is to be an entrepreneur, my own source of finance. Until that time I plan on continuing my education and gaining experience. The purpose of this website is to host my projects in a quasi-public environment. 
+I'm <span itemprop="name">Levi Pierce Evans</span>, a 17 year-old <span itemprop="hasOccupation">student</span> at <span itemprop="workLocation"><span itemprop="birthPlace">Lancaster</span> High school</span>. My long term goal is to become a serial entrepreneur, my own source of finance and work. I want to create video games that people find enjoyable: this would allow me to try programming, art, music and marketing(all of which I am interested in). A game studio would probably be my first startup, after that I would like to be able to make machines that could produce electronics in effecient ways. The reason for making these machines would be so that i could produce premium electronics that take full advatage of their size and weight. Until that time I plan on continuing my education and gaining experience. The purpose of this website is to host my projects in a quasi-public environment. 
 </p>
 	<h4>Music</h4>
 	<p>
