--- a/site/about/index.html
+++ b/site/about/index.html
@@ -34,7 +34,8 @@ I'm <span itemprop="name">Levi Pierce Evans</span>, a 17 year-old <span itemprop
 	The Begginers Guide to Living by Lia Hills<br />
 	The Giver by Lois Lowry<br />
 	20,000 Leagues Under the Sea by Jules Verne <br />
-	The Hotzone by Richard Preston
+	The Hotzone by Richard Preston<br />
+	On Tyranny: Twenty Lessons from the Twentieth Century by Timothy Snyder<br />
 	</p>
     </article>
 <script src="https://leavinth.github.io/javascript/footer.js" type="application/javascript" rel="preload"></script>
