--- a/site/schoolproj1/index.html
+++ b/site/schoolproj1/index.html
@@ -1,15 +1,29 @@
-<!DOCTYPE html>
-<html lang="en-us">
+<!doctype html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | The Dictator</title>
-    <script src="Build/UnityLoader.js"></script>
+	<title>The Dictator</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109328318-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-109328318-1');
+</script>
+    <script src="https://leavinth.github.io/javascript/head.js" type="application/javascript" rel="preload"></script>
+<script src="Build/UnityLoader.js"></script>
     <script>
       var gameInstance = UnityLoader.instantiate("gameContainer", "Build/thedictator.json");
     </script>
   </head>
   <body>
-    <div id="gameContainer" style="width: 1600px; height: 825px; margin: auto"></div>
+  	    <script src="https://leavinth.github.io/javascript/header.js" type="application/javascript" rel="preload"></script>
+	<article>
+      <h2>Article1</h2>
+     <div id="gameContainer" style="width: 1600px; height: 825px; margin: auto"></div>
+    </article>
+	  <script src="https://leavinth.github.io/javascript/footer.js" type="application/javascript" rel="preload"></script>
   </body>
 </html>
